--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.5",
     "countup.js": "^2.8.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
